File lease (#6855)