@@ -229,6 +229,7 @@
                 --add-opens com.azure.storage.file.share/com.azure.storage.file.share=ALL-UNNAMED
                 --add-opens com.azure.storage.file.share/com.azure.storage.file.share.implementation=ALL-UNNAMED
                 --add-opens com.azure.storage.file.share/com.azure.storage.file.share.models=ALL-UNNAMED
+                --add-opens com.azure.storage.file.share/com.azure.storage.file.share.specialized=ALL-UNNAMED
                 --add-reads com.azure.core=ALL-UNNAMED
                 --add-reads com.azure.core.test=ALL-UNNAMED
                 --add-reads com.azure.core.amqp=ALL-UNNAMED
